<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hive Lens</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_hive_lens2">HiveLens2</string>
    <string name="xCoord">X: </string>
    <string name="yCoord">Y: </string>
    <string name="zCoord">Z: </string>
    <string name="gyroToast">Info</string>
    <string name="accelToast">Info</string>
    <string name="goToGyro">To Gyroscope Info</string>
    <string name="goToAccel">To Accelerometer Info</string>

</resources>