<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HiveLens" 
    android:background="@drawable/background" >

    <TextView
        android:id="@+id/yCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xCoord"
        android:layout_below="@+id/xCoord"
        android:layout_marginTop="17dp"
        android:text="@string/yCoord"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/zCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yCoord"
        android:layout_below="@+id/yCoord"
        android:layout_marginTop="20dp"
        android:text="@string/zCoord"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/xCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/xCoord"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/accelToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zCoord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="accelToast"
        android:text="@string/accelToast"
        android:textColor="#000000" />

    <Button
        android:id="@+id/goToGyro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/accelToast"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:onClick="goToGyroInfo"
        android:text="@string/goToGyro"
        android:textColor="#000000" />
    
</RelativeLayout>