<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".HiveLens" >

    <TextView
        android:id="@+id/yCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/xCoord"
        android:layout_below="@+id/xCoord"
        android:layout_marginTop="20dp"
        android:text="@string/yCoord"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/zCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/yCoord"
        android:layout_below="@+id/yCoord"
        android:layout_marginTop="20dp"
        android:text="@string/zCoord"
        android:textColor="#FFFFFF" />

    <TextView
        android:id="@+id/xCoord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/xCoord"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/goToAccel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="130dp"
        android:onClick="goToAccelInfo"
        android:text="@string/goToAccel"
        android:textColor="#000000" />

    <Button
        android:id="@+id/gyroToast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/zCoord"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:onClick="gyroToast"
        android:text="@string/gyroToast"
        android:textColor="#000000" />
    
</RelativeLayout>